# debug-cross-compile-rusqlite

./: Cargo.toml  README.md  build.rs  update.sh
.github/workflows/: release.yml
src/: main.rs
